k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: twitter-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: twitter-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000

          - path: /api/ums/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ums-service
                port:
                  number: 9000

          - path: /api/twitter/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: twitter-service
                port:
                  number: 9001
